[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "nextcloudtalkbot"
version = "0.0.3"
authors = [
  { name="Massoud Ahmed", email="okko@okxo.de", homepage="https://okxo.de"},
]
description = "Python3 library for creating a Nextcloud Talk bot."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

keywords = ["nextcloud", "nextcloud talk", "bot"]

[project.urls]
"Homepage" = "https://github.com/sowoi/nextcloud-cloud-talk-bot"
"Bug Tracker" = "https://github.com/sowoi/nextcloud-cloud-talk-bot/issues"