[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "/nextcloud_talk_bot/*.py",
  "/tests/*.py",
]
exclude = [
  "/docs",
  "/dist",
  "/site",
  ".gitignore"

]

[project]
name = "nextcloudtalkbot"
version = "0.0.19"
homepage = "https://okxo.de"
authors = [
  { name="Massoud Ahmed", email="okko@okxo.de", homepage="https://okxo.de"},
]
description = "Python3 library for creating a Nextcloud Talk bot."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "cryptography",
    "requests",
]

keywords = ["nextcloud", "nextcloud talk", "bot"]

[project.urls]
"Homepage" = "https://github.com/sowoi/nextcloud-talk-bot"
"Bug Tracker" = "https://github.com/sowoi/nextcloud-talk-bot/issues"
"Documentation" = "https://nextcloud-talk-bot.readthedocs.io"