[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "/nextcloud_talk_bot/*.py",
  "/tests/*.py",
  "/locales/",
]
exclude = [
  "/docs",
  "/dist",
  "/site",
  ".gitignore",
  ".tox",
  ".venv",
  ".github"

]

[project]
name = "nextcloudtalkbot"
version = "0.0.45"
home-page = "https://okxo.de"
authors = [
  { name="Massoud Ahmed", email="okko@okxo.de", home-page="https://okxo.de"},
]
description = "Python3 library for creating a Nextcloud Talk bot."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
]

dependencies = [
    "cryptography",
    "requests",
    "requests_cache",
    "caldav",
    "icalendar",
    "vobject",
    "python-dateutil",
    "spacy",
]

keywords = ["nextcloud", "nextcloud talk", "bot"]

[project.urls]
"Homepage" = "https://github.com/sowoi/nextcloud-talk-bot"
"Bug Tracker" = "https://github.com/sowoi/nextcloud-talk-bot/issues"
"Documentation" = "https://nextcloud-talk-bot.readthedocs.io"